<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_mynetwork"
            android:icon="@drawable/ic_action_star"
            android:title="@string/nav_mynetwork" />
        <item
            android:id="@+id/nav_networks"
            android:icon="@drawable/ic_action_networks"
            android:title="@string/nav_networks" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_action_help"
            android:title="@string/nav_help" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_info"
            android:title="@string/nav_about" />

    </group>

</menu>