<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="uni.uni.fragments.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:padding="18dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/about_title"
                android:textColor="@color/black"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:id="@+id/about_devs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/about_name_licensetype"
                android:text="@string/about_devs"
                android:textColor="@color/black"
                android:textStyle="normal|bold" />


            <TextView
                android:id="@+id/about_name_cristian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_name_cristian"
                android:textColor="@color/black"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/about_name_manoj" />


            <TextView
                android:id="@+id/about_name_language"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:text="@string/about_name_language"
                android:layout_below="@id/about_name_cristian"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/about_name_java"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_name_language"
                android:text="@string/about_name_java"
                android:textColor="@color/black" />



            <TextView
                android:id="@+id/about_name_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/about_name_GNU_GPLv3"
                android:text="@string/about_name_description"
                android:textColor="@color/black"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/about_name_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/about_name_descriptioninfo"
                android:text="@string/about_name_version"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/about_name_versionnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/about_name_version"
                android:text="@string/about_name_versionnumber"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/about_name_descriptioninfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:text="@string/about_name_descriptioninfo"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
